Created a null brick singleton to make rendering easier